<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="damdata">
    <com.google.android.gms.ads.AdView
        android:id="@+id/damad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/dampagead">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/embalse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/embalse"
        android:textAppearance="?android:attr/textAppearanceLarge" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/desborde"
        android:id="@+id/desborde"
        android:layout_above="@+id/seguridad"
        android:layout_centerHorizontal="true"
        android:textColor="#c000ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/seguridad"
        android:id="@+id/seguridad"
        android:layout_above="@+id/observacion"
        android:layout_centerHorizontal="true"
        android:textColor="#13cc00" />

    <TextView
        android:id="@+id/observacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ajuste"
        android:layout_centerHorizontal="true"
        android:text="@string/observacion"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0006ff" />

    <TextView
        android:id="@+id/ajuste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/control"
        android:layout_centerHorizontal="true"
        android:text="@string/ajuste"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#d9c900" />

    <TextView
        android:id="@+id/control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/damad"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/control"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ff7700" />

    <TextView
        android:id="@+id/nivelesdealerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/desborde"
        android:layout_centerHorizontal="true"
        android:text="@string/nivelesdealerta"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_below="@+id/embalse"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/nivelesdealerta"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/level"
                android:text="@string/cargando"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/imageView"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/DamImage" />

            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/level"
                android:layout_centerHorizontal="true"
                android:text="@string/fecha"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/lastHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fecha"
                android:layout_centerHorizontal="true"
                android:text="@string/lastHour"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/droporincrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastHour"
                android:layout_centerHorizontal="true"
                android:text="@string/droporincrease"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="invisible" />
        </RelativeLayout>

    </ScrollView>



</RelativeLayout>
